--- a/covid-19.html
+++ b/covid-19.html
@@ -235,8 +235,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                  
                 </div>
               </div>
-
-            <div class="container-fluid"><br>
+             <div class="mts "><br>
                 <div class="tbl-wrpp">
                 <table class="table table-bordered" id="tblcovid">
                     <thead class="bg-info">
@@ -260,6 +259,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </table>
                 </div>
             </div>
+        
         </div>
         </div>  
  
