--- a/covid-19.html
+++ b/covid-19.html
@@ -17,7 +17,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
  <link href="css/custom_style.css" rel="stylesheet" type="text/css" media="all" >
  <link href="css/resum.css" rel="stylesheet" type="text/css" media="all" >
- <link href="css/covid19.css" rel="stylesheet" type="text/css" media="all" >
+ <link href="css/covid19.css" rel="stylesheet" type="text/css" >
  <link href="images/flags.css" rel="stylesheet" type="text/css" media="all" >
 <!-- js -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
